--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
   padding-right: 56px;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif; }
+  body * {
+    font-family: 'Lato', sans-serif; }
 
 .container {
   display: flex;
