--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,9 @@ body {
   body * {
     font-family: 'Lato', sans-serif; }
 
+a {
+  text-decoration: none; }
+
 .container {
   display: flex;
   flex-direction: row;
@@ -152,7 +155,111 @@ i {
 
 main {
   padding-top: 81px;
-  min-height: 100vh; }
+  min-height: 100vh;
+  position: relative; }
+  main #modal-wrapper {
+    visibility: hidden;
+    position: fixed;
+    display: flex;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin-left: -56px;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 11; }
+    main #modal-wrapper .popupOverlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 1; }
+    main #modal-wrapper .modal-window {
+      width: 300px;
+      height: 500px;
+      z-index: 2;
+      /* Toggle this class - hide and show the popup */
+      /* Add animation (fade in the popup) */ }
+      main #modal-wrapper .modal-window .popup {
+        visibility: hidden;
+        width: 500px;
+        height: 467px;
+        background-color: #fff;
+        color: #45413e;
+        border-radius: 6px;
+        padding: 50px;
+        box-sizing: border-box;
+        position: absolute;
+        top: 17%;
+        left: 32.5%;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        font-size: 13px; }
+        main #modal-wrapper .modal-window .popup h2 {
+          text-align: center;
+          font-size: 28px;
+          font-weight: bold; }
+        main #modal-wrapper .modal-window .popup .labelAndInput {
+          width: 100%;
+          height: 20%;
+          margin: 15px;
+          margin-left: 0; }
+          main #modal-wrapper .modal-window .popup .labelAndInput label {
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            position: relative; }
+            main #modal-wrapper .modal-window .popup .labelAndInput label a {
+              position: absolute;
+              right: 0; }
+          main #modal-wrapper .modal-window .popup .labelAndInput .input {
+            position: relative;
+            box-sizing: border-box; }
+            main #modal-wrapper .modal-window .popup .labelAndInput .input i.far {
+              position: absolute;
+              top: 33%;
+              right: 3%;
+              color: #afaead;
+              z-index: 1;
+              margin: 0; }
+          main #modal-wrapper .modal-window .popup .labelAndInput input {
+            border: 2px solid rgba(69, 65, 62, 0.2);
+            border-radius: 50px;
+            text-align: center;
+            height: 38px;
+            width: 100%; }
+        main #modal-wrapper .modal-window .popup button {
+          margin: auto;
+          background-color: #84bc22;
+          color: #fff;
+          border: none; }
+        main #modal-wrapper .modal-window .popup a {
+          text-align: center;
+          color: #84bc22; }
+      main #modal-wrapper .modal-window .show {
+        visibility: visible;
+        z-index: 2;
+        -webkit-animation: fadeIn 0.5s;
+        animation: fadeIn 0.5s; }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+  main .darken {
+    visibility: visible !important; }
 
 .slider-block {
   display: flex;
@@ -276,7 +383,7 @@ button {
   cursor: pointer;
   font-family: 'Lato', sans-serif; }
 
-button:focus {
+button:focus, input:focus {
   outline: 0; }
 
 .sales-block {
@@ -568,8 +675,7 @@ footer {
   font-size: 12px;
   color: #45413e; }
   footer a {
-    color: #45413e;
-    text-decoration: none; }
+    color: #45413e; }
   footer .copyright {
     display: flex;
     flex-direction: column; }
