--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 $nav-font:rgb(69, 65, 62);
 $nav-items-bgd: #262a32;
 $nav-item-border: #84bc22;
+$grey: #afaead;
 
 %flexy {
     display: flex;
@@ -26,6 +27,10 @@ body {
     * {
         font-family: 'Lato', sans-serif;
     }
+}
+
+a {
+    text-decoration: none;
 }
 
 .container {
@@ -69,7 +74,7 @@ i {
 }
 
 .nav-item:nth-child(n + 5) {
-    color: #afaead;
+    color: $grey;
 }
 
 .separator {
@@ -89,7 +94,7 @@ i {
 }
 
 .icons-block * {
-    color: #afaead;
+    color: $grey;
     font-size: 22px;
     padding-top: 15.5px;
     padding-bottom: 24.5px;
@@ -195,6 +200,129 @@ i {
 main {
     padding-top: 81px;
     min-height: 100vh;
+    position: relative;
+    #modal-wrapper {
+        visibility: hidden;
+        position:fixed;
+        display:flex;
+        top: 0;
+        width:100%;
+        height:100%;
+        margin-left: -56px;
+        justify-content:center;
+        align-items:center;
+        background:rgba(0,0,0,.7);
+        z-index:11;
+        .popupOverlay {
+            position:absolute;
+            width:100%;
+            height:100%;
+            z-index:1;
+        }
+        .modal-window {
+            width:300px;
+            height:500px;
+            z-index:2;
+            .popup {
+                visibility: hidden;
+                width: 500px;
+                height: 467px;
+                background-color: #fff;
+                color: $nav-font;
+                // text-align: center;
+                border-radius: 6px;
+                padding: 50px;
+                box-sizing: border-box;
+                position: absolute;
+                top: 17%;
+                left: 32.5%;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                font-size: 13px;
+                h2 {
+                    text-align: center;
+                    font-size: 28px;
+                    font-weight: bold;
+                }
+                .labelAndInput {
+                    width: 100%;
+                    height: 20%;
+                    margin: 15px;
+                    margin-left: 0;
+                    label {
+                        display: block;
+                        margin-top: 10px;
+                        margin-bottom: 10px;
+                        position: relative;
+                        a {
+                            position: absolute;
+                            right: 0;
+                        }
+                    }
+                    .input {
+                        position: relative;
+                        box-sizing: border-box;
+                        i.far {
+                            position: absolute;
+                            top: 33%;
+                            // bottom: 0;
+                            // left: 0;
+                            right: 3%;
+                            color: #afaead;
+                            z-index: 1;
+                            margin: 0;
+                            // padding-right: 40px;
+                            // padding: 9px;
+                        }
+                    }
+                    input {
+                        border: 2px solid rgba(69, 65, 62, 0.2);
+                        border-radius: 50px;
+                        text-align: center; 
+                        height: 38px;
+                        width: 100%;
+                    } 
+                }
+                button {
+                    margin: auto;
+                    background-color: $nav-item-border;
+                    color: #fff;
+                    border: none;
+                }
+                a {
+                    text-align: center;
+                    color: $nav-item-border;
+                }
+            }
+              
+            /* Toggle this class - hide and show the popup */
+            .show {
+                visibility: visible;
+                z-index: 2;
+                -webkit-animation: fadeIn 0.5s;
+                animation: fadeIn 0.5s;
+            }
+            
+            /* Add animation (fade in the popup) */
+            @-webkit-keyframes fadeIn {
+                from {opacity: 0;} 
+                to {opacity: 1;}
+            }
+            
+            @keyframes fadeIn {
+                from {opacity: 0;}
+                to {opacity:1 ;}
+            }
+        }
+    }
+    .darken {
+        visibility: visible !important;
+    }
 }
 
 .slider-block {
@@ -350,7 +478,7 @@ button {
     font-family: 'Lato', sans-serif;
 }
 
-button:focus {
+button:focus, input:focus {
     outline: 0;
 }
 
@@ -709,7 +837,6 @@ footer {
     color: $nav-font;
     a {
         color: $nav-font;
-        text-decoration: none;
     }
     .copyright {
         display: flex;
