--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@ body {
     padding-right: 56px;
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
+    color: $nav-font;
     * {
         font-family: 'Lato', sans-serif;
     }
@@ -38,7 +39,6 @@ a {
     flex-direction: row;
     justify-content: space-between;
     background-color: #fff;
-    // min-width: 1280px;
     width: 100%;
     box-sizing: border-box;
     position: fixed;
@@ -46,10 +46,7 @@ a {
     left: 0;
     right: 0;
     z-index: 10;
-    // margin-top: 13px;
     margin: 0 auto;
-    // margin-left: -56px;
-    // margin-right: -56px;
     padding-top: 13px;
     padding-left: 56px;
     padding-right: 56px;
@@ -201,7 +198,7 @@ main {
     padding-top: 81px;
     min-height: 100vh;
     position: relative;
-    #modal-wrapper {
+    .modal-wrapper {
         visibility: hidden;
         position:fixed;
         display:flex;
@@ -229,7 +226,6 @@ main {
                 height: 467px;
                 background-color: #fff;
                 color: $nav-font;
-                // text-align: center;
                 border-radius: 6px;
                 padding: 50px;
                 box-sizing: border-box;
@@ -249,50 +245,51 @@ main {
                     font-size: 28px;
                     font-weight: bold;
                 }
-                .labelAndInput {
-                    width: 100%;
-                    height: 20%;
-                    margin: 15px;
-                    margin-left: 0;
-                    label {
-                        display: block;
-                        margin-top: 10px;
-                        margin-bottom: 10px;
-                        position: relative;
-                        a {
-                            position: absolute;
-                            right: 0;
-                        }
-                    }
-                    .input {
-                        position: relative;
-                        box-sizing: border-box;
-                        i.far {
-                            position: absolute;
-                            top: 33%;
-                            // bottom: 0;
-                            // left: 0;
-                            right: 3%;
-                            color: #afaead;
-                            z-index: 1;
-                            margin: 0;
-                            // padding-right: 40px;
-                            // padding: 9px;
-                        }
-                    }
-                    input {
-                        border: 2px solid rgba(69, 65, 62, 0.2);
-                        border-radius: 50px;
-                        text-align: center; 
-                        height: 38px;
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    .labelAndInput {
                         width: 100%;
-                    } 
-                }
-                button {
-                    margin: auto;
-                    background-color: $nav-item-border;
-                    color: #fff;
-                    border: none;
+                        height: 20%;
+                        margin: 20px;
+                        margin-left: 0;
+                        label {
+                            display: block;
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                            position: relative;
+                            a {
+                                position: absolute;
+                                right: 0;
+                            }
+                        }
+                        .input {
+                            position: relative;
+                            box-sizing: border-box;
+                            i.far {
+                                position: absolute;
+                                top: 33%;
+                                right: 3%;
+                                color: #afaead;
+                                z-index: 1;
+                                margin: 0;
+                            }
+                        }
+                        input {
+                            border: 2px solid rgba(69, 65, 62, 0.2);
+                            border-radius: 50px;
+                            text-align: center; 
+                            height: 38px;
+                            width: 100%;
+                        } 
+                    }
+                    button {
+                        margin: 20px auto;
+                        background-color: $nav-item-border;
+                        color: #fff;
+                        border: none;
+                    }
                 }
                 a {
                     text-align: center;
@@ -322,6 +319,79 @@ main {
     }
     .darken {
         visibility: visible !important;
+    }
+
+    .cookieOverlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,.5);
+        z-index: 11;
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        align-items: center;
+        justify-content: center;
+        .cookieBody {
+            display: inline-block;
+            width: 90%;
+            min-height: 150px;
+            padding: 25px;
+            box-sizing: border-box;
+            background-color: white;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            position: relative;
+            h3 {
+                font-weight: bold;
+                color: $nav-item-border;
+                margin-bottom: 10px;
+            }
+            p {
+                font-size: 14px;
+                line-height: 21px;
+                width: 80%;
+            }
+            a.close,
+            a.submit {
+                margin-top: 0;
+                display: inline-block;
+                color: white;
+                background-color: $nav-item-border;
+                text-decoration: none;
+                font-family: sans-serif;
+                &:last-of-type {
+                    margin-right: 0;
+                }
+            }
+            a.close {
+                background-color: #fff;
+                color: $nav-font;
+                font-size: 26px;
+                position: absolute;
+                top: 4px;
+                right: 6px;
+            }
+            a.submit {
+                position: absolute;
+                bottom: 25px;
+                right: 25px;
+                padding-top: 10px;
+                box-sizing: border-box;
+                width: 148px;
+                height: 37px;
+                border-radius: 50px;
+                cursor: pointer;
+                font-family: 'Lato', sans-serif;
+                text-align: center;
+            }
+        }
     }
 }
 
@@ -410,9 +480,6 @@ main {
     height: 10px;
     border-radius: 50%;
 }
-
-// 'active' class must be added to .pagination span element while clicking on dot, 
-// appropriate class (nothing, 'central' or 'right') should be added to .slider-left block. Implement with JS
 
 .pagination span.active{
     border: 2px solid #fff;
@@ -507,7 +574,6 @@ button:focus, input:focus {
     width: 100vw;
     margin-left: -56px;
     padding: 50px 0;
-    // box-sizing: border-box;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -678,7 +744,6 @@ button:focus, input:focus {
     background-image: url(../images/banner.png);
     background-size: cover;
     height: 445px;
-    // width: 100%;
     margin: 0 -56px 0 -56px;
     text-align: center;
     display: flex;
@@ -698,7 +763,6 @@ button:focus, input:focus {
     width: 100vw;
     margin-left: -56px;
     padding: 40px 0;
-    // box-sizing: border-box;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -727,10 +791,8 @@ button:focus, input:focus {
         font-size: 20px;
         font-weight: bold;
         text-align: center;
-        // padding: 30px 0;
         display: flex;
         align-items: center;   
-        // display: inline-block;  
     }
     h3::before, h3::after {
         content: '';
@@ -762,7 +824,6 @@ button:focus, input:focus {
                 height: 190px;
                 border-top-left-radius: inherit;
                 border-top-right-radius: inherit;
-                // border-radius: inherit;
             }
             #post-1 {
                 background-image: url(../images/product-1.png);
